<resources>
    <string name="app_name">QwicTour</string>
    <string name="sign_up_as_tourist">Sign up as Tourist</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="phone">Phone</string>
    <string name="submit_details">Submit Details</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nin_passport">NIN/Passport</string>
    <string name="nationality">Nationality</string>
    <string name="find_the_best_tour_guide_in_town">Find the best Tour Guide in town</string>
    <string name="find_tour_guides">Find Tour Guides</string>
    <string name="find_transporters">Find Transporters</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="search">Search</string>
    <string name="available_tours">Available Tours</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="view_all">View All</string>
    <string name="wallet">Wallet</string>
    <string name="_5867">**** 5867</string>
    <string name="_12_12_2021">12/12/2021</string>
    <string name="balance">Balance</string>
    <string name="ugx_245000_00">UGX 245000.00</string>
    <string name="refill_button">Refill Button</string>
    <string name="transfer_funds">Transfer Funds</string>
    <string name="do_more_with_wallet">Do more with wallet</string>
    <string name="refill">Refill</string>
    <string name="transfer">Transfer</string>
    <string name="more">More</string>
    <string name="history">HISTORY</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="tour_guide_name">Tour Guide Name</string>
    <string name="notifications_icon">Notifications icon</string>
    <string name="closed_tours">Closed Tours</string>
    <string name="on_going_tour">OngoingTour</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pending_alerts">Pending Alerts</string>
    <string name="wallet_transactions_history">Wallet Transactions History</string>
    <string name="tour_history">Tour History</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="john">jon doe</string>
    <string name="tourguide">Tour guide</string>
    <string name="taken">ocuppied</string>
    <string name="tourguideprofile">tourguide</string>
    <string name="_0771234567">0780134747</string>
    <string name="user_id_number">TG-01</string>
    <string name="_5_mins_away_from_you">5 mins away from you</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_profile">Profile</string>
    <string name="reciept">RECIEPT</string>
    <string name="end_trip">END TRIP</string>
    <string name="start_trip">START TRIP</string>
    <string name="sign_up">Signup</string>
    <string name="login">Login</string>
    <string name="register_to_create_an_account">Register to create an account</string>
    <string name="username">Username</string>
    <string name="email_address">Email Addresz</string>
    <string name="phone_number">Phone number</string>
    <string name="roles_deliverer">Tourist</string>
    <string name="roles_client">TourGuide</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="kindlyenterpassword">Kindly Enter Password</string>
    <string name="eightcharacterlong">8 Character Long</string>
    <string name="kindlyconfirm">Kindly Confirm Password</string>
    <string name="matchingpasswordsneeded">Passwords must match</string>
    <string name="radiobtnusertype">Specify Role</string>
    <string name="thanks">"Thanks "</string>
    <string name="users">Users</string>
    <string name="clients">tourists</string>
    <string name="enteruserameneeded">Username needed</string>
    <string name="enteremailaddress">Enter emailaddress</string>
    <string name="enterphonenumber">Enter Phone Number</string>
    <string name="enter10digitnumbers">Enter 10 digits</string>
    <string name="sign_in">Login</string>
    <string name="login_to_continue_your_account">Enjoy guided tours around uganda with us</string>
    <string name="dont_have_an_account">Not registered yet?</string>
    <string name="register">Go ahead !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>